blog以外を追加してsphinxを生成

--- a/src/hydrogen.html
+++ b/src/hydrogen.html
@@ -139,7 +139,7 @@ LAllocator* allocator;</div></blockquote>
     begin_locals
       size 1
       method "None"
-      3 t36 [ d29  t31  uses1_0i_0d_0t]
+      3 t36 [ d29  t31  uses1_0i_0d_0t]  &lt;-- phi
     end_locals
   end_states
   begin_HIR
