--- a/src/overview.html
+++ b/src/overview.html
@@ -78,6 +78,7 @@ Hydrogenは、graphベースらしい</p>
 hydrogen-instructions  6.5kstep
 lithium                  1kstep
 lithium-allocator      3.0kstep
+type-info              0.8kstep
 
 ia32/lithium*         10  kstep
 ia32/codegen           0.7kstep</pre>
